--- a/creating-virtual-machines/interfaces-and-networks.adoc
+++ b/creating-virtual-machines/interfaces-and-networks.adoc
@@ -140,21 +140,20 @@ Create a `NetworkAttachmentDefinition` with IPAM.
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
-  name: ovs-vlan-200
+  name: macvlan-test
 spec:
   config: '{
-      "cniVersion": "0.3.1",
-      "type": "ovs",
-      "bridge": "br1",
-      "vlan": 200,
+      "type": "macvlan",
+      "master": "eth0",
+      "mode": "bridge",
       "ipam": {
         "type": "host-local",
-        "subnet": "10.250.250.0/24"
+              "subnet": "10.250.250.0/24"
       }
     }'
 ----
 
-Define a VMI with an OVS network as the default.
+Define a VMI with a https://github.com/intel/multus-cni[Multus] network as the default.
 
 [source,yaml]
 ----
@@ -163,13 +162,13 @@ spec:
   domain:
     devices:
       interfaces:
-        - name: ovs-net
+        - name: test1
           bridge: {}
   networks:
-  - name: ovs-net
+  - name: test1
     multus: # Multus network as default
       default: true
-      networkName: ovs-vlan-200
+      networkName: macvlan-test
 ----
 
 genie
