--- a/creating-virtual-machines/interfaces-and-networks.adoc
+++ b/creating-virtual-machines/interfaces-and-networks.adoc
@@ -238,6 +238,54 @@ spec:
     pod: {}
 ----
 
+______________________________________________________________________________
+**Note:** If a specific MAC address is configured for a virtual machine
+interface, it's passed to the underlying CNI plugin that is expected to
+configure the backend to allow for this particular MAC address. Not every
+plugin has native support for custom MAC addresses.
+______________________________________________________________________________
+
+______________________________________________________________________________
+**Note:**  For some CNI plugins without native support for custom MAC
+addresses, there is a workaround, which is to use the `tuning` CNI plugin to
+adjust pod interface MAC address. This can be used as follows:
+
+[source,yaml]
+----
+apiVersion: "k8s.cni.cncf.io/v1"
+kind: NetworkAttachmentDefinition
+metadata:
+  name: ptp-mac
+spec:
+  config: '{
+      "cniVersion": "0.3.1",
+      "name": "ptp-mac",
+      "plugins": [
+        {
+          "type": "ptp",
+          "ipam": {
+            "type": "host-local",
+            "subnet": "10.1.1.0/24"
+          }
+        },
+        {
+          "type": "tuning"
+        }
+      ]
+    }'
+----
+
+
+This approach may not work for all plugins. For example, OpenShift SDN is not
+compatible with `tuning` plugin.
+
+* Plugins that handle custom MAC addresses natively: `ovs`.
+* Plugins that are compatible with `tuning` plugin: `flannel`, `ptp`, `bridge`.
+* Plugins that don't need special MAC address treatment: `sriov` (in `vfio`
+  mode).
+______________________________________________________________________________
+
+
 Ports
 ^^^^^
 
