--- a/release-notes/changelog.adoc
+++ b/release-notes/changelog.adoc
@@ -1,5 +1,62 @@
 # Changelog
 
+## v0.15.0
+
+Released on: Tue Mar 5 10:35:08 2019 +0100
+
+- CI: Several fixes
+- Fix configurable number of KVM devices
+- Narrow virt-handler permissions
+- Use bazel for development builds
+- Support for live migration with shared and non-shared disks
+- Support for live migration progress tracking
+- Support for EFI boot
+- Support for libvirt 5.0
+- Support for extra DHCP options
+- Support for a hook to manipualte cloud-init metadata
+- Support setting a VM serial number
+- Support for exposing infra and VM metrics
+- Support for a tablet input device
+- Support for extra CPU flags
+- Support for ignition metadata
+- Support to set a default CPU model
+- Update to go 1.11.5
+
+## v0.14.0
+
+Released on: Mon Feb 4 22:04:14 2019 +0100
+
+- CI: Several stabilizing fixes
+- docs: Document the KubeVirt Razor
+- build: golang update
+- Update to Kubernetes 1.12
+- Update CDI
+- Support for Ready and Created Operator conditions
+- Support (basic) EFI
+- Support for generating cloud-init network-config
+
+## v0.13.0
+
+Released on: Tue Jan 15 08:26:25 2019 +0100
+
+- CI: Fix virt-api race
+- API: Remove volumeName from disks
+
+## v0.12.0
+
+Released on: Fri Jan 11 22:22:02 2019 +0100
+
+- Introduce a KubeVirt Operator for KubeVirt life-cycle management
+- Introduce dedicated kubevirt namespace
+- Support VMI ready conditions
+- Support vCPU threads and sockets
+- Support scale and HPA for VMIRS
+- Support to pass NTP related DHCP options
+- Support guest IP address reporting via qemu guest agent
+- Support for live migration with shared storage
+- Support scheduling of VMs based on CPU family
+- Support masquerade network interface binding
+
 ## v0.11.0
 
 Released on: Thu Dec 6 10:15:51 2018 +0100
