--- a/administration/node-eviction.adoc
+++ b/administration/node-eviction.adoc
@@ -60,6 +60,80 @@ target node.
 
 `kubectl drain <node name> --delete-local-data --ignore-daemonsets=true --force`
 
+How to evacuate VMIs via Live Migration from a Node
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+If the *LiveMigration* feature gate is enabled, it is possible to specify an
+`evictionStrategy` on VMIs which will react with live-migrations on specific
+taints on nodes. The following snipped on a VMI ensures that the VMI is migrated
+if the `kubevirt.io/drain:NoSchedule` taint is added to a nodes:
+
+[source,yaml]
+----
+spec:
+  evictionPolicy:
+    taints:
+      - effect: NoSchedule
+        key: kubevirt.io/drain
+        strategy: LiveMigrate
+----
+
+Here a full VMI:
+
+[source,yaml]
+----
+apiVersion: kubevirt.io/v1alpha3
+kind: VirtualMachineInstance
+metadata:
+  name: testvmi-nocloud
+spec:
+  terminationGracePeriodSeconds: 30
+  evictionPolicy:
+    taints:
+      - effect: NoSchedule
+        key: kubevirt.io/drain
+        strategy: LiveMigrate
+  domain:
+    resources:
+      requests:
+        memory: 1024M
+    devices:
+      disks:
+      - name: containerdisk
+        disk:
+          bus: virtio
+      - disk:
+          bus: virtio
+        name: cloudinitdisk
+  volumes:
+  - name: containerdisk
+    containerDisk:
+      image: kubevirt/fedora-cloud-container-disk-demo:latest
+  - name: cloudinitdisk
+    cloudInitNoCloud:
+      userData: |-
+        #cloud-config
+        password: fedora
+        chpasswd: { expire: False }
+----
+
+Once the VMI is created, taint the node with
+
+----
+kubectl taint nodes foo kubevirt.io/drain:NoSchedule
+----
+
+which will trigger a migration.
+
+Behind the scenes a *PodDisruptionBudget* is created for each VMI which has an
+*evictionPolicy* defined. This ensures that evictions will not blocked on these
+VMIs and that we can guarantee that a VMI will be migrated instead of shut off.
+
+**Note:** While the *evictionPolicy* blocks the shutdown of VMIs during
+evictions, the live migration process is detached from the drain process
+itselve. Therefore it is necessary to add specified taints as part of the drain
+process explicitly, until we have a better integrated solution.
+
 Re-enabling a Node after Eviction
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
