document lime migration timeouts configuration
Signed-off-by: Vladik Romanovsky <vromanso@redhat.com>

--- a/administration/live-migration.adoc
+++ b/administration/live-migration.adoc
@@ -153,4 +153,36 @@ data:
     parallelMigrationsPerCluster: 5
     parallelOutboundMigrationsPerNode: 2
     bandwidthPerMigration: 64Mi
+    completionTimeoutPerGiB: 800
+    progressTimeout: 150
 ....
+
+
+### Migration timeouts
+
+Depending on the type, the live migration process will copy virtual machine memory
+pages and disk blocks to the destination.
+During this process non-locked pages and blocks are being copied and become
+free for the instance to use again. To achieve a successful migration, it is
+assumed that the instance will write to the free pages and blocks (pollute the
+pages) at a lower rate than these are being copied.
+
+
+#### Completion time
+
+In some cases the virtual machine can write to different memory pages / disk
+blocks at a higher rate than these can be copied, which will prevent the
+migration process from completing in a reasonable amount of time.
+In this case, live migration will be aborted if it is running for a long
+perioud of time. The timeout is calculated base on the size of the VMI, it's
+memory and the ephemeral disks that are needed to be copied. The configurable
+parameter `completionTimeoutPerGiB`, which deafults to 800s is the time for GiB
+of data to wait for the migration to be completed before aborting it.
+A VMI with 8Gib of memory will time out after 6400 seconds.
+
+#### Progress timeout
+
+Live migration will also be aborted when it will be noticed that copying memory
+doesn't make any progress.
+The time to wait for live migration to make progress in transferring data is
+configurable by `progressTimeout` parameter, which defaults to 150s
