Correct display of notes in web interface walkthrough

--- a/web-interface/controlling-vms-modules/restart-vm-web.adoc
+++ b/web-interface/controlling-vms-modules/restart-vm-web.adoc
@@ -3,10 +3,9 @@
 
 A running virtual machine can be xref:vm-actions-web[restarted] from the &#8942; button found on each virtual machine in the *Workloads* -> *Virtual Machines* list, or from the xref:vm-actions-web[*Actions*] button on the *Virtual Machine Details* screen.
 
-[IMPORTANT]
-====
-Do not restart a virtual machine while it has a status of *Importing*. This will result in an error for the virtual machine and is a xref:../cnv_release_notes/cnv_release_notes.adoc#RN_known_issues[known issue].
-====
+________________________
+Important: Do not restart a virtual machine while it has a status of *Importing*. This will result in an error for the virtual machine and is a xref:../cnv_release_notes/cnv_release_notes.adoc#RN_known_issues[known issue].
+________________________
 
 .Procedure
 
