--- a/web-interface/templates-modules/editing-template-yaml-web.adoc
+++ b/web-interface/templates-modules/editing-template-yaml-web.adoc
@@ -5,10 +5,9 @@ You can edit the YAML configuration of a virtual machine template directly withi
 
 Not all parameters can be updated. If you edit values that cannot be changed and click *Save*, an error message shows, indicating the parameter that was not able to be updated.
 
-[NOTE]
-====
-Navigating away from the YAML screen while editing cancels any changes to the configuration you have made.
-====
+________________________
+Note: Navigating away from the YAML screen while editing cancels any changes to the configuration you have made.
+________________________
 
 .Procedure
 
