--- a/web-interface/controlling-vms-modules/start-vm-web.adoc
+++ b/web-interface/controlling-vms-modules/start-vm-web.adoc
@@ -10,7 +10,6 @@ Virtual machines can be xref:vm-actions-web[started] from the &#8942; button fou
 .. Alternatively, click the virtual machine name to open the *Virtual Machine Details* screen and click *Actions* and select *Start Virtual Machine*.
 . In the confirmation pop-up window, click *Start* to start the virtual machine.
 
-[NOTE]
-====
-When a virtual machine provisioned from a `URL` source is started for the first time, the virtual machine will be in the *Importing* state while {product-title} imports the container from the URL endpoint. This may take several minutes depending on the size of the image.
-====
+________________________
+Note: When a virtual machine provisioned from a `URL` source is started for the first time, the virtual machine will be in the *Importing* state while {product-title} imports the container from the URL endpoint. This may take several minutes depending on the size of the image.
+________________________
