--- a/web-interface/managing-vms-modules/creating-vm-yaml-web.adoc
+++ b/web-interface/managing-vms-modules/creating-vm-yaml-web.adoc
@@ -5,10 +5,9 @@ A virtual machine can also be created by writing or pasting a YAML configuration
 
 If your YAML configuration is invalid when you click *Create*, an error message indicates the parameter in which the error occurs. Only one error is shown at a time.
 
-[NOTE]
-====
-Navigating away from the YAML screen while editing cancels any changes to the configuration you have made.
-====
+________________________
+Note: Navigating away from the YAML screen while editing cancels any changes to the configuration you have made.
+________________________
 
 .Procedure
 
