--- a/web-interface/managing-vms-modules/editing-vm-yaml-web.adoc
+++ b/web-interface/managing-vms-modules/editing-vm-yaml-web.adoc
@@ -7,10 +7,9 @@ Not all parameters can be updated. If you edit values that cannot be changed and
 
 The YAML configuration can be edited while the virtual machine is *Running*, however the changes will only take effect after the virtual machine has been restarted.
 
-[NOTE]
-====
-Navigating away from the YAML screen while editing cancels any changes to the configuration you have made.
-====
+________________________
+Note: Navigating away from the YAML screen while editing cancels any changes to the configuration you have made.
+________________________
 
 .Procedure
 
