Add docs for connecting to RDP via UI

--- a/web-interface/vm-consoles-modules/vm-console-web.adoc
+++ b/web-interface/vm-consoles-modules/vm-console-web.adoc
@@ -1,9 +1,9 @@
 [[vm-console-web]]
 == Virtual Machine Console Sessions
 
-You can connect to the VNC and serial consoles of a running virtual machine from the *Consoles* tab in the *Virtual Machine Details* screen of the web console.
+You can connect to the VNC, Serial, and RDP consoles of a running virtual machine from the *Consoles* tab in the *Virtual Machine Details* screen of the web console.
 
-There are two consoles available: the graphical *VNC Console* and the *Serial Console*. The *VNC Console* opens by default whenever you navigate to the *Consoles* tab. You can switch between the consoles using the xref:vm-vnc-console-web[*VNC Console*]|xref:vm-serial-console-web[*Serial Console*] drop-down list.
+There are three choices available: the graphical *VNC Console*, the *Serial Console*, and *Desktop Viewer* which can be used to connect to the *RDP Console* (Windows only). The *VNC Console* opens by default whenever you navigate to the *Consoles* tab. You can switch between the consoles using the xref:vm-vnc-console-web[*VNC Console*]|xref:vm-serial-console-web[*Serial Console*]|xref:vm-desktop-viewer-web[*Desktop Viewer*] drop-down list.
 
 Console sessions remain active in the background unless they are disconnected. When the *Disconnect before switching* checkbox is active and you switch consoles, the current console session is disconnected and a new session with the selected console connects to the virtual machine. This ensures only one console session is open at a time.
 
@@ -13,3 +13,6 @@ The *Send Key* button lists key combinations to send to the virtual machine.
 .Options for the *Serial Console*
 Use the *Disconnect* button to manually disconnect the *Serial Console* session from the virtual machine. +
 Use the *Reconnect* button to manually open a *Serial Console* session to the virtual machine.
+
+.Options for the *Desktop Viewer*
+The *Network Interface* drop-down allows you to choose the network interface for the VM to which you want to connect.
