--- a/web-interface/web-interface.adoc
+++ b/web-interface/web-interface.adoc
@@ -23,6 +23,7 @@ include::web-interface/controlling-vms-modules/restart-vm-web.adoc[leveloffset=+
 include::web-interface/vm-consoles-modules/vm-console-web.adoc[leveloffset=+2]
 include::web-interface/vm-consoles-modules/vm-serial-console-web.adoc[leveloffset=+2]
 include::web-interface/vm-consoles-modules/vm-vnc-console-web.adoc[leveloffset=+2]
+include::web-interface/vm-consoles-modules/vm-desktop-viewer-web.adoc[leveloffset=+2]
 
 [[managing-nics-web]]
 === Managing Virtual Machine NICs
