Added nic binding method to ui docs

--- a/web-interface/resource-modules/networking-wizard-fields-web.adoc
+++ b/web-interface/resource-modules/networking-wizard-fields-web.adoc
@@ -15,6 +15,9 @@
 |NETWORK CONFIGURATION
 |List of available *NetworkAttachmentDefinition* objects.
 
+|BINDING METHOD
+|List of available link:../creating-virtual-machines/interfaces-and-networks.html#frontend[binding methods]. For pod networking, the possible values are `masquerade`, `bridge`, and `sriov`. For other networks, the possible values are bridge and sriov.
+
 |PXE NIC
 |List of PXE-capable networks. Only visible if `PXE` has been selected as the `Provision Source`.
 |===
