--- a/web-interface/resource-modules/vm-actions-web.adoc
+++ b/web-interface/resource-modules/vm-actions-web.adoc
@@ -19,5 +19,13 @@
 |*Delete Virtual Machine*
 |_All_
 |Permanently delete the virtual machine from the cluster.
+
+|*Migrate Virtual Machine*
+|_Running_
+|Live migrates the virtual machine to an another node.
+
+|*Cancel Virtual Machine Migration*
+|_Migrating_
+|Cancels the migration of the virtual machine.
 |===
 
