--- a/web-interface/web-interface.adoc
+++ b/web-interface/web-interface.adoc
@@ -15,6 +15,8 @@ include::web-interface/managing-vms-modules/delete-vm-web.adoc[leveloffset=+2]
 include::web-interface/controlling-vms-modules/start-vm-web.adoc[leveloffset=+2]
 include::web-interface/controlling-vms-modules/stop-vm-web.adoc[leveloffset=+2]
 include::web-interface/controlling-vms-modules/restart-vm-web.adoc[leveloffset=+2]
+include::web-interface/controlling-vms-modules/migrate-vm-web.adoc[leveloffset=+2]
+include::web-interface/controlling-vms-modules/cancel-migrate-vm-web.adoc[leveloffset=+2]
 
 [[vm-consoles-web]]
 === Accessing Virtual Machine Consoles
