--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -103,27 +103,11 @@ Once Kubernetes is deployed, you will need to deploy the KubeVirt
 add-on. There are 2 ways to deploy the add-on to a cluster using the `kubectl` tool and
 manifest files:
 
-1. Stable flow
-+++++++++++++++
+1. Operator flow
+++++++++++++++++
 
-The stable flow installs KubeVirt using a manifest file, which contains all deployments and configurations of the
-KubeVirt core components:
-
-[source,bash]
-----
-$ RELEASE=v0.16.2
-$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt.yaml
-----
-
-2. Alternative flow (aka Operator flow)
-+++++++++++++++++++++++++++++++++++++++
-
-Since version 0.13.0 KubeVirt can be installed using the new KubeVirt Operator and a KubeVirt custom resource.
-
-_________________________________________________________________________
-Note: The Operator is considered to be experimental for the time being.
-There is currently no way to upgrade KubeVirt using this flow.
-_________________________________________________________________________
+The recommended way to deploy KubeVirt is using the KubeVirt Operator and
+KubeVirt custom resource.
 
 [source,bash]
 ----
@@ -132,11 +116,23 @@ $ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/$VERSI
 $ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/$VERSION/kubevirt-cr.yaml
 ----
 
-Since version 0.14.0 you can also use `kubectl` for waiting until all KubeVirt components are "Ready".
+Since version 0.14.0, you can use `kubectl` for waiting until all KubeVirt components are "Ready".
 
 [source,bash]
 ----
 $ kubectl wait kv kubevirt --for condition=Ready
+----
+
+2. Obsolete flow (manual deployment)
+++++++++++++++++++++++++++++++++++++
+
+Before operator, one would install KubeVirt using a manifest file, which
+contains all deployments and configurations of the KubeVirt core components:
+
+[source,bash]
+----
+$ RELEASE=v0.16.2
+$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt.yaml
 ----
 
 Independent of the deployment flow, the new components will be deployed in the `kubevirt` namespace:
