Update release notes for v0.16.0 and v0.17.0
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/release-notes/changelog.adoc
+++ b/release-notes/changelog.adoc
@@ -1,5 +1,33 @@
 # Changelog
 
+## v0.17.0
+
+Released on: Mon May 6 16:18:01 2019 +0200
+
+- Several testcase additions
+- Improved virt-controller node distribution
+- Improved support between version migrations
+- Support for a configurable MachineType default
+- Support for live-migration of a VM on node taints
+- Support for VM swap metrics
+- Support for versioned virt-launcher / virt-handler communication
+- Support for HyperV flags
+- Support for different VM run strategies (i.e manual and rerunOnFailure)
+- Several fixes for live-migration (TLS support, protected pods)
+
+## v0.16.0
+
+Released on: Fri Apr 5 23:18:22 2019 +0200
+
+- Bazel fixes
+- Initial work to support upgrades (not finalized)
+- Initial support for HyperV features
+- Support propagation of MAC addresses to multus
+- Support live migration cancellation
+- Support for table input devices
+- Support for generating OLM metadata
+- Support for triggering VM live migration on node taints
+
 ## v0.15.0
 
 Released on: Tue Mar 5 10:35:08 2019 +0100
