Updating DNS doc
A network and interface is required to be defined, or the VMI gets no IP
and thus none of the rest of the DNS example works.

--- a/using-virtual-machines/dns.adoc
+++ b/using-virtual-machines/dns.adoc
@@ -36,10 +36,16 @@ spec:
       - disk:
           bus: virtio
         name: cloudinitdisk
+      interfaces:
+      - name: default
+        bridge: {}
     resources:
       requests:
         memory: 1024M
   terminationGracePeriodSeconds: 0
+  networks:
+  - name: default
+    pod: {}
   volumes:
   - name: containerdisk
     containerDisk:
