more update information
Signed-off-by: David Vossel <davidvossel@gmail.com>

--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -220,12 +220,15 @@ ________________________________________________________________________________
 Update
 ~~~~~~
 
-Zero downtime rolling updates supported from the release `v0.17.0`:
+Zero downtime rolling updates are supported starting with release `v0.17.0`
+onward. Updating from any release prior to the KubeVirt `v0.17.0` release is
+not supported.
  
-Starting in `v0.17.0`, the KubeVirt operator supports updates. Updates are
-triggered by changing the imageTag value in the KubeVirt CR's spec.
+Updates are triggered one of two ways.
 
-For example. Updating from `v0.17.0-alpha.1` to `v0.17.0` is as simple as
+1. By changing the imageTag value in the KubeVirt CR's spec.
+
+For example, updating from `v0.17.0-alpha.1` to `v0.17.0` is as simple as
 patching the KubeVirt CR with the `imageTag: v0.17.0` value. From there the
 KubeVirt operator will begin the process of rolling out the new version of
 KubeVirt. Existing VM/VMIs will remain uninterrupted both during and after
@@ -236,8 +239,24 @@ the update succeeds.
 $ kubectl patch kv kubevirt -n kubevirt --type=json -p '[{ "op": "add", "path": "/spec/imageTag", "value": "v0.17.0" }]'
 ----
 
-NOTE: Updating from any release prior to the KubeVirt `v0.17.x` series is not
-supported.
+2. Or, by updating the kubevirt operator if no imageTag value is set.
+
+When no imageTag value is set in the kubevirt CR, the system assumes that the
+version of KubeVirt is locked to the version of the operator. This means that
+updating the operator will result in the underlying KubeVirt installation being
+updated as well.
+
+[source,bash]
+----
+$ export RELEASE=v0.17.0
+$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt-operator.yaml
+----
+
+
+The first way provides a fine granular approach where you have full control
+over what version of KubeVirt is installed independently of what version of
+the KubeVirt operator you might be running. The second approach allows you to
+lock both the operator and operand to the same version.
 
 Delete
 ~~~~~~
