Fixed anchor links (must be lowercase)
Signed-off-by: Marc Sluiter <msluiter@redhat.com>

--- a/creating-virtual-machines/disks-and-volumes.adoc
+++ b/creating-virtual-machines/disks-and-volumes.adoc
@@ -192,16 +192,16 @@ Volumes
 
 Supported volume sources are
 
-* link:#cloudInitNoCloud[*cloudInitNoCloud*]
-* link:#persistentVolumeClaim[*persistentVolumeClaim*]
+* link:#cloudinitnocloud[*cloudInitNoCloud*]
+* link:#persistentvolumeclaim[*persistentVolumeClaim*]
 * link:#ephemeral[*ephemeral*]
-* link:#containerDisk[*containerDisk*]
-* link:#emptyDisk[*emptyDisk*]
-* link:#hostDisk[*hostDisk*]
-* link:#dataVolume[*dataVolume*]
-* link:#configMap[*configMap*]
+* link:#containerdisk[*containerDisk*]
+* link:#emptydisk[*emptyDisk*]
+* link:#hostdisk[*hostDisk*]
+* link:#datavolume[*dataVolume*]
+* link:#configmap[*configMap*]
 * link:#secret[*secret*]
-* link:#serviceAccount[*serviceAccount*]
+* link:#serviceaccount[*serviceAccount*]
 
 All possible configuration options are available in the
 https://kubevirt.github.io/api-reference/master/definitions.html#_v1_volume[Volume
